Fixing missing background on chat

--- a/samples/apps/autogen-studio/frontend/src/styles/canvas.css
+++ b/samples/apps/autogen-studio/frontend/src/styles/canvas.css
@@ -211,6 +211,10 @@ div.workflow-canvas {
   background: #fff;
 }
 
+.ant-drawer-content-wrapper {
+  background: #fff;
+}
+
 .build-chat > .text-primary {
   height: 100%!important;
 }
